Parser/Parser.cpp
//
// Created by Mathias Vatter on 24.08.23.
//

#include "Parser.h"

Parser::Parser(std::vector<Token> tokens): Processor(std::move(tokens)) {}

Result<std::unique_ptr<NodeProgram>> Parser::parse() {
	return parse_program();
}

std::string Parser::sanitize_binary(const std::string& input) {
    if (input.empty()) {
        return input;
    }
    std::string sanitized = input;
    // Entferne das 'b' oder 'B' am Anfang oder Ende und kehre die Zeichenfolge um, falls nötig
    if (input[0] == 'b' || input[0] == 'B') {
        sanitized = input.substr(1);
        std::ranges::reverse(sanitized);
    } else if (input.back() == 'b' || input.back() == 'B') {
        sanitized = input.substr(0, input.size() - 1);
    }
    return sanitized;
}

std::string Parser::sanitize_hex(const std::string& input) {
    // Überprüfen, ob der String mit einer Ziffer zwischen 0 und 9 beginnt und mit "h" endet
    if (input.size() > 1 && isdigit(input[0]) && (input.back() == 'h' || input.back() == 'H')) {
        // Entfernen der ersten Ziffer und des letzten "h"
        std::string newStr = input.substr(1, input.size() - 2);
        // Hinzufügen von "0x" am Anfang
        return newStr;
    }
    // Wenn die Bedingungen nicht erfüllt sind, den ursprünglichen String zurückgeben
    return input;
}

Result<std::unique_ptr<NodeInt>> Parser::parse_int(const Token& tok, const int base, NodeAST* parent) {
    auto value = tok.val;
    if(base == 2)
        value = sanitize_binary(value);
    else if (base == 16) {
        value = sanitize_hex(value);
    }
    try {
        const long long val = std::stoll(value, nullptr, base);
        auto node_int = std::make_unique<NodeInt>(static_cast<int32_t>(val & 0xFFFFFFFF), tok);
    	node_int->set_range(tok);
        node_int->parent= parent;
        return Result<std::unique_ptr<NodeInt>>(std::move(node_int));
    } catch (const std::exception& e) {
        const auto expected = std::string(1, "valid int base "[base]);
        return Result<std::unique_ptr<NodeInt>>(
            CompileError(ErrorType::ParseError, "Invalid integer format.", expected, tok));
    }
}


Result<std::unique_ptr<NodeString>> Parser::parse_string(NodeAST* parent) {
	auto string = consume();
    auto node_string = std::make_unique<NodeString>(std::move(string.val), string);
	node_string->set_range(string);
    node_string->parent = parent;
    return Result<std::unique_ptr<NodeString>>(std::move(node_string));
}

Result<std::unique_ptr<NodeAST> > Parser::parse_boolean(NodeAST *parent) {
	auto boolean = consume(); // consume 'true'/'false'
	auto node_boolean = std::make_unique<NodeBoolean>(boolean.type == token::TRUE, boolean);
	node_boolean->set_range(boolean);
	node_boolean->parent = parent;
	return Result<std::unique_ptr<NodeAST>>(std::move(node_boolean));
}

Result<std::unique_ptr<NodeFormatString>> Parser::parse_fstring(NodeAST *parent) {
	auto start_tok = consume(); // consume 'f"'

	auto fstring_node = std::make_unique<NodeFormatString>(start_tok);
	while (peek().type != token::FSTRING_STOP) {
		if (peek().type == token::FSTRING_EXPR_START) {
			consume(); // consume '<'
			auto expr = parse_expression(parent);
			if (expr.is_error()) {
				return Result<std::unique_ptr<NodeFormatString>>(expr.get_error());
			}
			fstring_node->add_element(std::move(expr.unwrap()));
			if (peek().type != token::FSTRING_EXPR_STOP) {
				return Result<std::unique_ptr<NodeFormatString>>(
					CompileError(ErrorType::ParseError, "Expected '>' to close format string expression.", ">", peek()));
			}
			consume(); // consume '>'
		} else if (peek().type == token::STRING) {
			auto fstring = parse_string(parent);
			if (fstring.is_error()) {
				return Result<std::unique_ptr<NodeFormatString>>(fstring.get_error());
			}
			fstring_node->add_element(std::move(fstring.unwrap()));
		} else {
			auto error = CompileError(
				ErrorType::ParseError,
				"Expected a string or format string expression inside format string.",
				"string or format string expression",
				peek());
			return Result<std::unique_ptr<NodeFormatString>>(error);
		}
	}
	auto quotes = consume(); // consume fstring end
	fstring_node->parent = parent;
	fstring_node->quotes = quotes.val;
	fstring_node->set_range(start_tok, quotes);
	return Result<std::unique_ptr<NodeFormatString>>(std::move(fstring_node));
}

Result<std::unique_ptr<NodeAST>> Parser::parse_nil(NodeAST* parent) {
	auto nil = consume(); // consume 'nil'
	auto node_nil = std::make_unique<NodeNil>(nil);
	node_nil->set_range(nil);
	node_nil->parent = parent;
	return Result<std::unique_ptr<NodeAST>>(std::move(node_nil));
}

Result<std::unique_ptr<NodeAST>> Parser::parse_wildcard(NodeAST* parent) {
	auto wildcard = consume();
	auto node_wildcard = std::make_unique<NodeWildcard>(wildcard.val, wildcard);
	node_wildcard->set_range(wildcard);
	node_wildcard->parent = parent;
	return Result<std::unique_ptr<NodeAST>>(std::move(node_wildcard));
}

Result<std::unique_ptr<NodeAST>> Parser::parse_number(NodeAST* parent) {
    auto value = consume(); // consume int/float/hexa/binary
    std::unique_ptr<NodeAST> number_node = nullptr;
    // convert with c methods, error catching
    if (value.type == token::INT) {
        auto parsed_int = parse_int(value, 10, parent);
        if(parsed_int.is_error())
            return Result<std::unique_ptr<NodeAST>>(parsed_int.get_error());
        return Result<std::unique_ptr<NodeAST>>(std::move(parsed_int.unwrap()));
    } else if(value.type == token::FLOAT) {
        try {
            auto node_real = std::make_unique<NodeReal>(std::stod(value.val), value);
        	node_real->set_range(value);
            node_real->parent = parent;
            return Result<std::unique_ptr<NodeAST>>(std::move(node_real));
        } catch (const std::exception &e) {
            return Result<std::unique_ptr<NodeAST>>(
			CompileError(ErrorType::ParseError, "Invalid real format.", "valid real", value));
        }
    } else if(value.type == token::HEXADECIMAL) {
        auto parsed_hex = parse_int(value, 16, parent);
        if(parsed_hex.is_error())
            return Result<std::unique_ptr<NodeAST>>(parsed_hex.get_error());
        return Result<std::unique_ptr<NodeAST>>(std::move(parsed_hex.unwrap()));
    } else if (value.type == token::BINARY) {
        auto parsed_binary = parse_int(value, 2, parent);
        if(parsed_binary.is_error())
            return Result<std::unique_ptr<NodeAST>>(parsed_binary.get_error());
        return Result<std::unique_ptr<NodeAST>>(std::move(parsed_binary.unwrap()));
    }
    return Result<std::unique_ptr<NodeAST>>(
    CompileError(ErrorType::ParseError, "Unknown number type.",  "INT, REAL, HEXADECIMAL, BINARY", value));
}

Result<std::unique_ptr<NodeVariable>> Parser::parse_variable(NodeAST* parent, const std::optional<Token>& is_persistent, DataType var_type) {
    auto var_token = consume();
    std::string var_name = var_token.val;
	auto ty = TypeRegistry::get_type_from_identifier(var_name[0]);
	if(ty != TypeRegistry::Unknown) var_name = var_name.erase(0,1);
    auto node_variable = std::make_unique<NodeVariable>(is_persistent, var_name, ty, var_token, var_type);
	node_variable->set_range(var_token);
    node_variable->parent = parent;
    return Result<std::unique_ptr<NodeVariable>>(std::move(node_variable));
}

Result<std::unique_ptr<NodeVariableRef>> Parser::parse_variable_ref(NodeAST* parent) {
	auto var_token = consume();
	std::string var_name = var_token.val;
	const auto ty = TypeRegistry::get_type_from_identifier(var_name[0]);
	if(ty != TypeRegistry::Unknown) var_name = var_name.erase(0,1);
	auto node_variable_ref = std::make_unique<NodeVariableRef>(var_name, var_token);
	node_variable_ref->set_range(var_token);
	node_variable_ref->parent = parent;
	node_variable_ref->ty = ty;
	return Result<std::unique_ptr<NodeVariableRef>>(std::move(node_variable_ref));
}

Result<std::unique_ptr<NodePointer>> Parser::parse_pointer(NodeAST* parent, const std::optional<Token>& is_persistent) {
	auto ptr_token = consume();
	std::string ptr_name = ptr_token.val;
	auto ty = TypeRegistry::get_type_from_identifier(ptr_name[0]);
	if(ty != TypeRegistry::Unknown) {
		auto error = CompileError(ErrorType::SyntaxError,"Found unknown Pointer Syntax.", "", peek());
		error.m_message += " Pointer cannot have <vanilla KSP> identifiers.";
		error.m_got = ptr_name[0];
		error.m_expected = "valid annotation syntax, e.g. '"+ptr_name+" : <Object>'";
		error.exit();
	}
	auto node_pointer = std::make_unique<NodePointer>(is_persistent, ptr_name, ty, ptr_token);
	node_pointer->set_range(ptr_token);
	node_pointer->parent = parent;
	return Result<std::unique_ptr<NodePointer>>(std::move(node_pointer));
}

Result<std::unique_ptr<NodePointerRef>> Parser::parse_pointer_ref(NodeAST* parent) {
	auto ptr_token = consume();
	std::string ptr_name = ptr_token.val;
	auto ty = TypeRegistry::get_type_from_identifier(ptr_name[0]);
	if(ty != TypeRegistry::Unknown) {
		auto error = CompileError(ErrorType::SyntaxError,"Found unknown Pointer Syntax.", "", peek());
		error.m_message += " Pointer Reference cannot have <vanilla KSP> identifiers.";
		error.m_got = ptr_name[0];
		error.exit();
	}
	auto node_pointer_ref = std::make_unique<NodePointerRef>(ptr_name, ptr_token);
	node_pointer_ref->set_range(ptr_token);
	node_pointer_ref->parent = parent;
	node_pointer_ref->ty = ty;
	return Result<std::unique_ptr<NodePointerRef>>(std::move(node_pointer_ref));
}

Result<std::unique_ptr<NodeDataStructure>> Parser::parse_array(NodeAST *parent, std::optional<Token> is_persistent, DataType var_type) {
	auto error = CompileError(ErrorType::SyntaxError,"Found unknown Array Syntax.", "", peek());
    auto arr_token = consume();
    std::string arr_name = arr_token.val;
	auto ty = TypeRegistry::get_type_from_identifier(arr_name[0]);
	if(ty != TypeRegistry::Unknown) arr_name = arr_name.erase(0,1);
	std::unique_ptr<NodeDataStructure> node_array = nullptr;
	std::unique_ptr<NodeParamList> sizes = std::make_unique<NodeParamList>(arr_token);
    sizes->parent = node_array.get();
    if(peek().type == token::OPEN_BRACKET) {
        consume(); // consume [
        // if it is an empty array initialization
        if (peek().type != token::CLOSED_BRACKET) {
            auto sizes_params = parse_multiple_values(node_array.get());
            if (sizes_params.is_error()) {
                return Result<std::unique_ptr<NodeDataStructure>>(sizes_params.get_error());
            }
            sizes = std::move(sizes_params.unwrap());
        }
        if(peek().type != token::CLOSED_BRACKET) {
			error.m_expected = "]";
			return Result<std::unique_ptr<NodeDataStructure>>(error);
		}
        consume(); // consume ]
    } else {
		error.m_expected = "[";
        return Result<std::unique_ptr<NodeDataStructure>>(error);
    }

	// if it is multidimensional array
	if(sizes->params.size() > 1) {
		auto node = std::make_unique<NodeNDArray>(
			std::move(is_persistent),
			arr_name, ty,
			std::move(sizes), arr_token
		);
		node->dimensions = (int)node->sizes->size();
		// provide type dimensions here because eg '!' can be used for nd-arrays but are usually for 1 dimension only
		if(auto nd_type = ty->cast<CompositeType>()) {
			node->ty = TypeRegistry::add_composite_type(nd_type->get_compound_type(), nd_type->get_element_type(), node->dimensions);
		}
		node_array = std::move(node);
	} else {
		auto node = std::make_unique<NodeArray>(arr_name, arr_token);
		node->persistence = std::move(is_persistent);
		node->data_type = var_type;
        node->ty = ty;
		if(!sizes->params.empty()) node->size = std::move(sizes->params[0]);
		node_array = std::move(node);
		node_array->set_child_parents();
	}
	node_array->set_range(arr_token, peek(-1));
	node_array->parent = parent;
	return Result<std::unique_ptr<NodeDataStructure>>(std::move(node_array));
}

Result<std::unique_ptr<NodeReference>> Parser::parse_array_ref(NodeAST *parent) {
	auto error = CompileError(ErrorType::SyntaxError,"Found unknown Array Reference Syntax.", "", peek());
	auto arr_token = consume();
	std::string arr_name = arr_token.val;
	auto ty = TypeRegistry::get_type_from_identifier(arr_name[0]);
	if(ty != TypeRegistry::Unknown) arr_name = arr_name.erase(0,1);
	std::unique_ptr<NodeReference> node_array_ref = nullptr;
	auto indexes = std::make_unique<NodeParamList>(arr_token);;
	indexes->parent = node_array_ref.get();
	if(peek().type == token::OPEN_BRACKET) {
		consume(); // consume [
		// if it is an empty array initialization
		if (peek().type == token::CLOSED_BRACKET) {
			error.m_message += "Empty Array Reference Initialization is not allowed.";
			return Result<std::unique_ptr<NodeReference>>(error);
		}
		auto index_params = parse_multiple_values(node_array_ref.get());
		if (index_params.is_error()) {
			return Result<std::unique_ptr<NodeReference>>(index_params.get_error());
		}
		indexes = std::move(index_params.unwrap());
		if(peek().type != token::CLOSED_BRACKET) {
			error.m_expected = "]";
			return Result<std::unique_ptr<NodeReference>>(error);
		}
		consume(); // consume ]
	} else {
		error.m_expected = "[";
		return Result<std::unique_ptr<NodeReference>>(error);
	}
	// if it is multidimensional array reference
	if(indexes->params.size() > 1) {
		auto node = std::make_unique<NodeNDArrayRef>(arr_name, std::move(indexes), arr_token);
		node_array_ref = std::move(node);
	} else {
		auto node = std::make_unique<NodeArrayRef>(arr_name, std::move(indexes->params[0]),arr_token);
		node_array_ref = std::move(node);
	}
	node_array_ref->set_range(arr_token, peek(-1));
	node_array_ref->parent = parent;
	node_array_ref->ty = ty;
	return Result<std::unique_ptr<NodeReference>>(std::move(node_array_ref));
}


Result<std::unique_ptr<NodeAST>> Parser::parse_expression(NodeAST* parent) {
    auto lhs = parse_string_expr(parent);
    if(lhs.is_error()) {
        return Result<std::unique_ptr<NodeAST>>(lhs.get_error());
    }
	auto concat_done = _parse_string_expr_rhs(std::move(lhs.unwrap()), parent);
	if (concat_done.is_error()) return Result<std::unique_ptr<NodeAST>>(concat_done.get_error());

	// NEW: attach ternary tail with lowest precedence
	return _parse_ternary_rhs(std::move(concat_done.unwrap()), parent);
}

Result<std::unique_ptr<NodeAST>> Parser::parse_string_expr(NodeAST* parent) {
    if (peek().type == token::STRING) {
	    if (auto expr = parse_string(parent); !expr.is_error()) {
	    	return Result<std::unique_ptr<NodeAST>>(std::move(expr.unwrap()));
	    } else return Result<std::unique_ptr<NodeAST>>(expr.get_error());
    } else if (peek().type == token::FSTRING_START) {
    	if (auto expr = parse_fstring(parent); !expr.is_error()) {
    		return Result<std::unique_ptr<NodeAST>>(std::move(expr.unwrap()));
    	} else return Result<std::unique_ptr<NodeAST>>(expr.get_error());
    } else {
	    if (auto expr = parse_binary_expr(parent); !expr.is_error()) {
            return Result<std::unique_ptr<NodeAST>>(std::move(expr.unwrap()));
        } else return Result<std::unique_ptr<NodeAST>>(expr.get_error());
    }
}

Result<std::unique_ptr<NodeAST>> Parser::_parse_string_expr_rhs(std::unique_ptr<NodeAST> lhs, NodeAST* parent) {
    while(true) {
        Token string_op = peek();
        if(peek().type != token::STRING_OP) {
            return Result<std::unique_ptr<NodeAST>>(std::move(lhs));
        }
        consume();
    	auto start_tok = peek();
        auto rhs = parse_string_expr(lhs.get());
        if(rhs.is_error()) {
            return Result<std::unique_ptr<NodeAST>>(rhs.get_error());
        }
        rhs = _parse_string_expr_rhs(std::move(rhs.unwrap()), parent);
        if (rhs.is_error()) {
            return Result<std::unique_ptr<NodeAST>>(rhs.get_error());
        }
		auto node_binary_expr = std::make_unique<NodeBinaryExpr>(string_op.type, std::move(lhs), std::move(rhs.unwrap()), get_tok());
    	node_binary_expr->set_range(node_binary_expr->left->range, node_binary_expr->right->range);
        lhs = std::move(node_binary_expr);
        lhs->ty = TypeRegistry::String;
    }
}

Result<std::unique_ptr<NodeAST>> Parser::parse_binary_expr(NodeAST* parent) {
    auto lhs = _parse_primary_expr(parent);
    if(!lhs.is_error()) {
        return _parse_binary_expr_rhs(0, std::move(lhs.unwrap()), parent);
    }
    return Result<std::unique_ptr<NodeAST>>(lhs.get_error());
}

Result<std::unique_ptr<NodeAST>> Parser::parse_reference_chain(NodeAST *parent) {
	auto chain = std::make_unique<NodeAccessChain>(peek());
	if (peek().type != token::KEYWORD) {
		auto error = CompileError(
			ErrorType::SyntaxError,
			"Expected identifier at start of reference chain.",
			"identifier",
			peek()
		);
		return Result<std::unique_ptr<NodeAST>>(error);
	}
	while(peek().type == token::KEYWORD) {
		std::unique_ptr<NodeAST> stmt = nullptr;
		if (peek().type == token::KEYWORD) {
			// is function
			if (peek(1).type == token::OPEN_PARENTH) {
				auto var_function = parse_function_call(parent);
				if (var_function.is_error()) {
					return Result<std::unique_ptr<NodeAST>>(var_function.get_error());
				}
				stmt = std::move(var_function.unwrap());
			} else if (peek(1).type == token::OPEN_BRACKET) {
				auto var_array = parse_array_ref(parent);
				if (var_array.is_error()) {
					return Result<std::unique_ptr<NodeAST>>(var_array.get_error());
				}
				if (peek().type == token::ARROW) {
					auto get_control = parse_get_control_statement(std::move(var_array.unwrap()), parent);
					if (get_control.is_error())
						return Result<std::unique_ptr<NodeAST>>(get_control.get_error());
					stmt = std::move(get_control.unwrap());
				} else {
					stmt = std::move(var_array.unwrap());
				}
			} else {
				// is variable
				auto var = parse_variable_ref(parent);
				if (var.is_error()) {
					return Result<std::unique_ptr<NodeAST>>(var.get_error());
				}
				if (peek().type == token::ARROW) {
					auto get_control = parse_get_control_statement(std::move(var.unwrap()), parent);
					if (get_control.is_error())
						return Result<std::unique_ptr<NodeAST>>(get_control.get_error());
					stmt = std::move(std::move(get_control.unwrap()));
				} else {
					stmt = std::move(std::move(var.unwrap()));
				}
			}
		}
		chain->add_method(std::move(stmt));
		// --- Transactional newline skip: only keep it if a DOT follows ---
		size_t save_pos = m_pos;
		_skip_linebreaks();                    // tentatively skip linebreaks
		if (peek().type == token::DOT) {
			consume();                         // consume '.'
			// Intentionally do NOT skip linebreaks after the dot:
			// 'foo\n  .bar' valid (newline before dot), 'foo.\nbar' invalid.
		} else {
			m_pos = save_pos;                  // restore -> preserve trailing newline
			break;                             // no further access chain
		}
		// ----
	}
	chain->set_range(chain->tok, peek(-1));
	if(chain->chain.size() == 1) {
		chain->chain[0]->parent = parent;
		return Result(std::move(chain->chain[0]));
	}
	chain->parent = parent;
	return Result<std::unique_ptr<NodeAST>>(std::move(chain));
}


Result<std::unique_ptr<NodeAST>> Parser::_parse_primary_expr(NodeAST* parent) {
	if(peek().type == token::RETURN) {
		m_tokens[m_pos].type = token::KEYWORD;
	}
    if(peek().type == token::KEYWORD) {
		return parse_reference_chain(parent);
    // is expression in brackets
    } else if (peek().type == token::OPEN_PARENTH) {
        return _parse_parenth_expr(parent);
    } else if (peek().type == token::INT || peek().type == token::FLOAT || peek().type == token::HEXADECIMAL || peek().type == token::BINARY) {
        return parse_number(parent);
    // unary operators bool_not, bit_not, sub
    } else if (UNARY_TOKENS.contains(peek().type)) {
	    return parse_unary_expr(parent);
    } else if (peek().type == token::OPEN_BRACKET) {
	    return parse_init_list(parent);
    } else if (peek().type == token::TRUE || peek().type == token::FALSE) {
		return parse_boolean(parent);
	} else if (peek().type == token::NIL) {
		return parse_nil(parent);
	} else if (peek().type == token::NEW) {
		auto var_method = parse_function_call(parent);
		if (!var_method.is_error()) {
			return Result<std::unique_ptr<NodeAST>>(std::move(var_method.unwrap()));
		}
		return Result<std::unique_ptr<NodeAST>>(var_method.get_error());
	} else if(peek().type == token::MULT) {
		return parse_wildcard(parent);
    } else {
        return Result<std::unique_ptr<NodeAST>>(
    CompileError(ErrorType::ParseError,"Found unknown expression token.", "keyword, integer, parenthesis", peek()));
    }
}

Result<std::unique_ptr<NodeAST>> Parser::parse_unary_expr(NodeAST* parent) {
    auto node_unary_expr = std::make_unique<NodeUnaryExpr>(get_tok());
    const Token unary_op = consume();
    auto expr = _parse_primary_expr(node_unary_expr.get());
    if(expr.is_error()) {
        return Result<std::unique_ptr<NodeAST>>(expr.get_error());
    }
    node_unary_expr->op = unary_op.type;
    node_unary_expr->operand = std::move(expr.unwrap());
    // node_unary_expr->set_child_parents();
	node_unary_expr->set_range(unary_op, peek(-1));
    node_unary_expr->parent = parent;
    return Result<std::unique_ptr<NodeAST>>(std::move(node_unary_expr));
}


Result<std::unique_ptr<NodeAST>> Parser::_parse_binary_expr_rhs(const int precedence, std::unique_ptr<NodeAST> lhs, NodeAST* parent) {
    while(true) {
        int prec = Parser::get_binop_precedence(peek().type);
        if(prec < precedence)
            return Result<std::unique_ptr<NodeAST>>(std::move(lhs));
        // its not -1 so it is a binop
        auto bin_op = peek();
        consume();
        auto rhs = _parse_primary_expr(parent);
        if (rhs.is_error()) {
            return Result<std::unique_ptr<NodeAST>>(rhs.get_error());
        }
        if (const int next_precedence = Parser::get_binop_precedence(peek().type); prec < next_precedence) {
            rhs = _parse_binary_expr_rhs(prec + 1, std::move(rhs.unwrap()), parent);
            if (rhs.is_error()) {
                return Result<std::unique_ptr<NodeAST>>(rhs.get_error());
            }
        }
        Type* type = TypeRegistry::Unknown;
		if (COMPARISON_TOKENS.contains(bin_op.type)) {
            // Check if rhs is NodeComparisonExpr because comparisons in comparisons are not allowed
            if (lhs->ty == TypeRegistry::Comparison) {
                return Result<std::unique_ptr<NodeAST>>(CompileError(ErrorType::SyntaxError,
                 "Nested Comparisons are not allowed.", "valid expression operator", bin_op));
            }
            type = TypeRegistry::Comparison;
		} else if (bin_op.type == token::BOOL_AND || bin_op.type == token::BOOL_OR){
			type = TypeRegistry::Boolean;
		}

		auto node_binary_expr = std::make_unique<NodeBinaryExpr>(bin_op.type, std::move(lhs), std::move(rhs.unwrap()), get_tok());
    	node_binary_expr->set_range(node_binary_expr->left->range, node_binary_expr->right->range);
        node_binary_expr->parent = parent;
        lhs = std::move(node_binary_expr);
        lhs->ty = type;
    }
}

// Expect tokens: token::TERNARY for '?' and token::TYPE for ':'
// Right-associative: a ? b : c ? d : e  ==  a ? b : (c ? d : e)

Result<std::unique_ptr<NodeAST>>
Parser::_parse_ternary_rhs(std::unique_ptr<NodeAST> condition, NodeAST* parent) {
    while (peek().type == token::TERNARY) {
        Token qmark = consume();                  // consume '?'
        _skip_linebreaks();                       // allow line breaks after '?'

        // Parse 'then' branch with full expression power (may contain further ternaries)
        auto thenRes = parse_expression(parent);
        if (thenRes.is_error()) return Result<std::unique_ptr<NodeAST>>(thenRes.get_error());
        auto thenExpr = std::move(thenRes.unwrap());

        _skip_linebreaks();
        if (peek().type != token::TYPE) {
            return Result<std::unique_ptr<NodeAST>>(CompileError(
                ErrorType::SyntaxError, "Expected ':' in ternary expression.", "':'", peek()));
        }
        consume();                                // consume ':'
        _skip_linebreaks();

        // For right-associativity we must parse the else-branch as another ternary layer
        auto elseRes = parse_expression(parent);

        if (elseRes.is_error()) return Result<std::unique_ptr<NodeAST>>(elseRes.get_error());
        auto elseExpr = std::move(elseRes.unwrap());

        // Build node
        auto node = std::make_unique<NodeTernary>(
        	std::move(condition),
        	std::move(thenExpr),
        	std::move(elseExpr),
        	qmark
        );
        node->parent = parent;
        node->set_range(node->condition->range, node->else_branch->range);

        condition = std::move(node);
        // loop continues to chain multiple '? :' at same precedence
    }
    return Result<std::unique_ptr<NodeAST>>(std::move(condition));
}

Result<std::unique_ptr<NodeAST>> Parser::_parse_parenth_expr(NodeAST* parent) {
    auto start_tok = consume(); // eat (
    auto expr = parse_expression(parent);
    if (peek().type != token::CLOSED_PARENTH) {
		return Result<std::unique_ptr<NodeAST>>(CompileError(ErrorType::ParseError,
		 "Missing parenthesis.",  ")", peek()));
    }
    auto end_tok = consume(); // eat )
    return expr;
}

Result<std::unique_ptr<NodeFunctionParam>> Parser::parse_function_param(NodeAST* parent) {
	auto start_token = peek();
	auto node_func_param = std::make_unique<NodeFunctionParam>(start_token);
	if (start_token.type == token::REF) {
		consume(); // consume ref
		node_func_param->is_pass_by_ref = true;
	}

	auto error = CompileError(ErrorType::ParseError,"Incorrect syntax in function parameter.", "", peek());
	if(peek().type != token::KEYWORD) {
		error.m_expected = "<variable>, <array>";
		return Result<std::unique_ptr<NodeFunctionParam>>(error);
	}

	if (is_array_declaration()) {
		auto parsed_arr = parse_declare_array(node_func_param.get());
		if(parsed_arr.is_error()) {
			return Result<std::unique_ptr<NodeFunctionParam>>(parsed_arr.get_error());
		}
		node_func_param->variable = std::move(parsed_arr.unwrap());
		// variable
	} else if(is_variable_declaration()) {
		auto parsed_var = parse_declare_variable(node_func_param.get());
		if (parsed_var.is_error()) {
			return Result<std::unique_ptr<NodeFunctionParam>>(parsed_var.get_error());
		}
		node_func_param->variable = std::move(parsed_var.unwrap());
	} else {
		error.m_expected = "<variable>, <array>";
		return Result<std::unique_ptr<NodeFunctionParam>>(error);
	}

	std::unique_ptr<NodeAST> r_value = nullptr;
	// if there is an assignment following
	if (peek().type == token::ASSIGN) {
		consume(); //consume :=
		if (peek().type == token::OPEN_PARENTH) {
			size_t backup_pos = m_pos; // backup token index

			if (auto exprResult = parse_expression(node_func_param.get()); !exprResult.is_error()) {
				// if start was "(" and before  was ")" -> param_list
				if(peek(-1).type == token::CLOSED_PARENTH) {
					auto param_list = std::make_unique<NodeParamList>(get_tok(), std::move(exprResult.unwrap()));
					param_list ->parent = node_func_param.get();
					r_value = std::move(param_list);
				} else {
					r_value = std::move(exprResult.unwrap());
				}
			} else {
				return Result<std::unique_ptr<NodeFunctionParam>>(exprResult.get_error());
			}
		} else {
			if (auto exprResult = parse_expression(node_func_param.get()); !exprResult.is_error()) {
				r_value = std::move(exprResult.unwrap());
			} else {
				return Result<std::unique_ptr<NodeFunctionParam>>(exprResult.get_error());
			}
		}
